--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="Miriam's Baby Shower"
-      content="Miriam's Baby Shower"
+      name="Miriam & Oscar's Baby Shower"
+      content="Miriam & Oscar's Baby Shower"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Miriam's Baby Shower</title>
+    <title>Miriam & Oscar's Baby Shower</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
